Bug 124796 - Calc shows excel file with incorrect plot, overlay y axis not adjusted
Summary: Calc shows excel file with incorrect plot, overlay y axis not adjusted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-04-17 14:11 UTC by Stefan
Modified: 2025-03-30 09:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Excel file showing this problem (170.00 KB, application/vnd.ms-excel)
2019-04-17 14:11 UTC, Stefan
Details
comparison MSO 2010 and LibreOffice 6.3 Master (94.35 KB, image/png)
2019-04-17 15:01 UTC, Xisco Faulí
Details
XLSX file with the same problem (22.07 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-04-18 12:17 UTC, Balázs Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan 2019-04-17 14:11:35 UTC
Created attachment 150825 [details]
Excel file showing this problem

The plot in an Excel file is wrong in Calc and correct in Excel. Converting to ODS does not help.

In this case there is an overlay of two plots and Calc does not adjust the y axis correctly.

I tested this with the newest version of Libreoffice (6.2.2.2).
Comment 1 Xisco Faulí 2019-04-17 15:01:43 UTC
Created attachment 150829 [details]
comparison MSO 2010 and LibreOffice 6.3 Master
Comment 2 Xisco Faulí 2019-04-17 15:03:27 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 8aa579830b20072af8d6e149d6b279362fe98b91
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4

@Balazs Varga, I thought you could be interested in this issue...
Comment 3 Balázs Varga 2019-04-18 12:17:22 UTC
Created attachment 150851 [details]
XLSX file with the same problem

Thank you Xisco, for putting me on the CC List. :)

There are two ways to solve this problem.
First option is to handle it (in case of OOXML files) at the OOXML import filter, I already have a working patch for that. :)

But I think the source of the bug is in the chart2 module. If you create a combined chart with a barchart and a linechart, one on the primary and one on the secondary axis, and delete the secondary axis, the primary axis will not be re-scaled.
And why is that: because the dataseries is still attached to the secondary axis, which is not exist anymore.
But maybe that could be another bugreport, and here just fix the OOXML import filter.
I'm going to look at what options we have to solve this in the chart2 module too.
Comment 4 Commit Notification 2019-04-26 06:50:46 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2ec293ab590c440fe7e36f5b7fcbef4cbfe5133c%5E%21

tdf#124796 Fix chart primary Y axis scaling

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.